fix: update spacing between paragraphs (#1)

--- a/static/css/zozo.css
+++ b/static/css/zozo.css
@@ -235,6 +235,7 @@ hr {
 .post .post_content p {
   line-height: 2em;
   letter-spacing: 0.2px;
+  margin-bottom: 0.5em;
 }
 
 .post .post_content a {
